--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,1 +1,73 @@
+/* Estilização da página home */
+.homeCardOne {
+  display: flex;
+  margin-top: 132px;
+  margin-bottom: 132px;
+  margin-right: 89px;
+  margin-left: 89px;
+}
 
+.homeCardTwo {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 132px;
+  margin-bottom: 132px;
+  margin-right: 89px;
+  margin-left: 89px;
+}
+
+.pageImageOne {
+  margin-right: 82px;
+  border-radius: 22px;
+}
+
+.pageImageTwo {
+  margin-left: 82px;
+  border-radius: 22px;
+}
+
+.imgCarousel {
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: 100%;
+  height: auto;
+}
+
+@media only screen and (max-width: 800px){
+  .homeCardOne {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5px;
+    margin-top: 20px;
+  }
+
+  .homeCardTwo {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    align-items: center;
+  }
+
+  .pageImageOne {
+    margin: 0px;
+    margin-bottom: 20px;
+  }
+
+  .pageImageTwo {
+    margin: 0px;
+    margin-top: 20px;
+  }
+}
+
+/* Estilização da página About */
+.aboutText {
+  margin: 100px
+}
+
+@media only screen and (max-width: 700px) {
+  .aboutText {
+    margin: 50px
+  }
+}
